fix background (solid too large)

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background: url(/solid.png) repeat 0 0;
+    background: url(/brushed.png) repeat 0 0;
     font-family: 'Raleway', sans-serif;
     font-size: 3.5em;
     padding-top: 8em;
